k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: myapp

spec:
  selector:
    app: frontend

  ports:
    - name: http
      port: 80
      targetPort: 5173
      protocol: TCP

  type: LoadBalancer
