k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8000

        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
